[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prepr"
version = "0.0.4"
authors = [
    { name = "Tanner B. Corcoran", email = "tannerbcorcoran@gmail.com" },
]
description = "A system for creating pretty class representations"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tanrbobanr/prepr"
"Documentation" = "https://github.com/tanrbobanr/prepr/blob/main/README.md"